# RAGPilot-Base

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.cursor/: rules.md
RAGPilot/: __init__.py  asgi.py  celery.py  paginator.py  serializers.py  settings.py  urls.py  wsgi.py
celery_app/extractors/: extract_pdf.py  extract_structured_file.py  utils.py
celery_app/tasks/: __init__.py  conversations.py
conversations/: admin.py  models.py  urls.py  utils.py  views.py
conversations/management/commands/: error_stats.py
conversations/migrations/: 0001_initial.py
home/: forms.py  mixins.py  urls.py  views.py
profiles/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/management/commands/: check_oauth_redirect.py  (+5 more)
profiles/migrations/: 0001_initial.py
sources/: admin.py  apps.py  context_processors.py  models.py  prompts.py  signals.py  tools.py  urls.py  views.py
sources/migrations/: 0001_initial.py
sources/views/: __init__.py  file_views.py  source_views.py
static/: robots.txt
templates/: _terms_modal.html  base.html  chat_widget.html  deep_research_widget.html  home.html  login.html  profile.html
templates/sources/: source_create.html  source_delete.html  source_detail.html  source_edit.html  source_list.html  source_upload.html
utils/: __init__.py  file_to_df.py  nl_to_sql.py  oauth_utils.py  question_suggestions.py  search.py  str_date.py
websites/: admin.py  middleware.py  models.py  urls.py  views.py
websites/migrations/: 0001_initial.py
(+3 files in other folders)
